fixed z-index issue

--- a/client/apps/root/root.less
+++ b/client/apps/root/root.less
@@ -444,8 +444,8 @@ img {
   position: fixed;
   right: 0;
   left: @am-leftbar-width;
-  z-index: 100;
-  background: #fcfcfc;
+  z-index: 30;
+  background: rgba(252,252,252,0.95);
   padding: 0 16px;
   line-height: 46px;
   box-shadow: 0 0 1px 0 rgba(0,0,0,0.14);
